// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Representation change redacted page GET /applications-service/case/1/relevant-representations/1/representation-details/change-representation should render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-one-half\\">
            <form method=\\"post\\" novalidate>
                <fieldset class=\\"govuk-fieldset\\">
                    <legend class=\\"govuk-fieldset__legend govuk-fieldset__legend--l\\">
                        <h1 class=\\"govuk-fieldset__heading\\"> Change redaction</h1>
                    </legend><strong class=\\"govuk-heading-s govuk-!-margin-bottom-6\\"><strong class=\\"govuk-tag govuk-tag--grey\\">awaiting review</strong></strong>
                    <div                     class=\\"govuk-form-group\\">
                        <div class=\\"govuk-radios\\" data-module=\\"govuk-radios\\">
                            <div class=\\"govuk-radios__item\\">
                                <input class=\\"govuk-radios__input\\" id=\\"changeRedaction\\" name=\\"changeRedaction\\"
                                type=\\"radio\\" value=\\"true\\">
                                <label class=\\"govuk-label govuk-radios__label\\" for=\\"changeRedaction\\">Redacted</label>
                            </div>
                            <div class=\\"govuk-radios__item\\">
                                <input class=\\"govuk-radios__input\\" id=\\"changeRedaction-2\\" name=\\"changeRedaction\\"
                                type=\\"radio\\" value=\\"false\\">
                                <label class=\\"govuk-label govuk-radios__label\\" for=\\"changeRedaction-2\\">Unredacted</label>
                            </div>
                        </div>
        </div>
        <button type=\\"submit\\" class=\\"govuk-button govuk-!-margin-top-3\\" data-module=\\"govuk-button\\">Save and continue</button>
        </fieldset>
        </form>
    </div>
    </div>
</main>"
`;

exports[`Representation change redacted page POST /applications-service/case/1/relevant-representations/1/representation-details/change-representation' Error - select an option should patch the representation and redirect to the next page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" data-module=\\"govuk-error-summary\\">
                <div role=\\"alert\\">
                    <h2 class=\\"govuk-error-summary__title\\"> There is a problem</h2>
                    <div class=\\"govuk-error-summary__body\\">
                        <ul class=\\"govuk-list govuk-error-summary__list\\">
                            <li><a href=\\"#changeRedaction\\">Select one option</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-one-half\\">
            <form method=\\"post\\" novalidate>
                <fieldset class=\\"govuk-fieldset\\">
                    <legend class=\\"govuk-fieldset__legend govuk-fieldset__legend--l\\">
                        <h1 class=\\"govuk-fieldset__heading\\"> Change redaction</h1>
                    </legend><strong class=\\"govuk-heading-s govuk-!-margin-bottom-6\\"><strong class=\\"govuk-tag govuk-tag--grey\\">awaiting review</strong></strong>
                    <div                     class=\\"govuk-form-group govuk-form-group--error\\">
                        <p id=\\"changeRedaction-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Select one option</p>
                        <div                         class=\\"govuk-radios\\" data-module=\\"govuk-radios\\">
                            <div class=\\"govuk-radios__item\\">
                                <input class=\\"govuk-radios__input\\" id=\\"changeRedaction\\" name=\\"changeRedaction\\"
                                type=\\"radio\\" value=\\"true\\">
                                <label class=\\"govuk-label govuk-radios__label\\" for=\\"changeRedaction\\">Redacted</label>
                            </div>
                            <div class=\\"govuk-radios__item\\">
                                <input class=\\"govuk-radios__input\\" id=\\"changeRedaction-2\\" name=\\"changeRedaction\\"
                                type=\\"radio\\" value=\\"false\\">
                                <label class=\\"govuk-label govuk-radios__label\\" for=\\"changeRedaction-2\\">Unredacted</label>
                            </div>
        </div>
    </div>
    <button type=\\"submit\\" class=\\"govuk-button govuk-!-margin-top-3\\" data-module=\\"govuk-button\\">Save and continue</button>
    </fieldset>
    </form>
    </div>
    </div>
</main>"
`;
